Logging setup added into notebooks

--- a/notebooks/Deep Belief Network/Deep Belief Neural Network Class Weighting.ipynb
+++ b/notebooks/Deep Belief Network/Deep Belief Neural Network Class Weighting.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a8574604",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/othmanebelarbi/Documents/DBN-FL/venv/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -30,6 +39,7 @@
     "import sys\n",
     "sys.path.append('../..')\n",
     "\n",
+    "from logger import setup_logging\n",
     "from models import DBN\n",
     "from utils import (\n",
     "    dataset,\n",
@@ -42,11 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15d69239",
+   "execution_count": 7,
+   "id": "f7f077f8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "LOG_CONFIG_PATH = os.path.join(os.path.abspath(\"../..\"), \"logger\", \"logger_config.json\")\n",
+    "LOG_DIR   = os.path.join(os.path.abspath(\"../..\"), \"logs\")\n",
     "DATA_DIR  = os.path.join(os.path.abspath(\"../..\"), \"data\")\n",
     "IMAGE_DIR = os.path.join(os.path.abspath(\"../..\"), \"images\")"
    ]
@@ -61,13 +73,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c5e213c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu device\n"
+     ]
+    }
+   ],
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print('Using {} device'.format(device))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "149f3665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.mkdir(LOG_DIR)\n",
+    "setup_logging(save_dir=LOG_DIR, log_config=LOG_CONFIG_PATH)"
    ]
   },
   {
@@ -80,10 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "436a18e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# instances in training set:  1318783\n",
+      "# instances in validation set:  439595\n",
+      "# instances in testing set:  439595\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the datasets\n",
     "train_data, val_data, test_data = dataset.get_dataset(data_path=DATA_DIR, balanced=False)\n",
@@ -111,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3ea40082",
    "metadata": {},
    "outputs": [],
@@ -141,17 +182,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d0ad940f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DBN(\n",
+      "  (fc): Linear(in_features=64, out_features=6, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "print(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f059be3e",
    "metadata": {},
    "outputs": [],
@@ -180,7 +231,22 @@
    "execution_count": null,
    "id": "a93412e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO 2022-05-16 00:02:46,448 | train.py:80 | Epoch 1/1:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 39%|██████████████████████████████████████████▉                                                                  | 4062/10303 [03:10<07:11, 14.46it/s]"
+     ]
+    }
+   ],
    "source": [
     "history = train(model, criterion, optimizer, train_loader, valid_loader, num_epochs, device)\n",
     "\n",
