--- a/notebooks/Deep Belief Network/Deep Belief Neural Network SMOTE RandomUnderSampler + Class Weighting.ipynb
+++ b/notebooks/Deep Belief Network/Deep Belief Neural Network SMOTE RandomUnderSampler + Class Weighting.ipynb
@@ -30,6 +30,7 @@
     "import sys\n",
     "sys.path.append('../..')\n",
     "\n",
+    "from logger import setup_logging\n",
     "from models import DBN\n",
     "from utils import (\n",
     "    dataset,\n",
@@ -47,6 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "LOG_CONFIG_PATH = os.path.join(os.path.abspath(\"../..\"), \"logger\", \"logger_config.json\")\n",
+    "LOG_DIR   = os.path.join(os.path.abspath(\"../..\"), \"logs\")\n",
     "DATA_DIR  = os.path.join(os.path.abspath(\"../..\"), \"data\")\n",
     "IMAGE_DIR = os.path.join(os.path.abspath(\"../..\"), \"images\")"
    ]
@@ -68,6 +71,17 @@
    "source": [
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print('Using {} device'.format(device))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca79fd1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.mkdir(LOG_DIR)\n",
+    "setup_logging(save_dir=LOG_DIR, log_config=LOG_CONFIG_PATH)"
    ]
   },
   {
