Filename of the plots renamed

--- a/notebooks/MultiLayerPerceptron/MultiLayerPerceptron -- SMOTE RandomUnderSampler.ipynb
+++ b/notebooks/MultiLayerPerceptron/MultiLayerPerceptron -- SMOTE RandomUnderSampler.ipynb
@@ -239,7 +239,7 @@
     "                                    labels=labels,\n",
     "                                    save=True,\n",
     "                                    save_dir=IMAGE_DIR,\n",
-    "                                    filename=\"bal_dbn_train_confusion_matrix.pdf\")"
+    "                                    filename=\"bal_mlp_train_confusion_matrix.pdf\")"
    ]
   },
   {
@@ -267,7 +267,7 @@
     "                                    labels=labels,\n",
     "                                    save=True,\n",
     "                                    save_dir=IMAGE_DIR,\n",
-    "                                    filename=\"bal_dbn_valid_confusion_matrix.pdf\")"
+    "                                    filename=\"bal_mlp_valid_confusion_matrix.pdf\")"
    ]
   },
   {
@@ -326,7 +326,7 @@
     "                                    labels=labels,\n",
     "                                    save=True,\n",
     "                                    save_dir=IMAGE_DIR,\n",
-    "                                    filename=\"bal_dbn_test_confusion_matrix.pdf\")"
+    "                                    filename=\"bal_mlp_test_confusion_matrix.pdf\")"
    ]
   },
   {
@@ -371,7 +371,7 @@
     "                             labels=labels,\n",
     "                             save=True,\n",
     "                             save_dir=IMAGE_DIR,\n",
-    "                             filename=\"bal_dbn_roc_curve.pdf\")"
+    "                             filename=\"bal_mlp_roc_curve.pdf\")"
    ]
   },
   {
@@ -394,7 +394,7 @@
     "                                          labels=labels,\n",
     "                                          save=True,\n",
     "                                          save_dir=IMAGE_DIR,\n",
-    "                                          filename=\"bal_dbn_prec_recall_curve.pdf\")"
+    "                                          filename=\"bal_mlp_prec_recall_curve.pdf\")"
    ]
   },
   {
@@ -412,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '../../checkpoints/bal_deep_belief_network.pt'\n",
+    "path = '../../checkpoints/bal_multilayer_perceptron.pt'\n",
     "torch.save({\n",
     "            'epoch': num_epochs,\n",
     "            'model_state_dict': model.state_dict(),\n",
